assets/css/style.css
* {
    box-sizing: border-box;
    margin: 0s;
    padding: 0;
}
/* body style */

body {
    background-color: rgb(179, 179, 179);
    width: 100%;
}
/* header style & nav style art */

.header {
    width: 100%;
    padding: 50px;
    font-family: 'Times New Roman', Times, serif;
    background-color: black;
    display: inline-flex;
    flex-wrap: wrap;
    position: sticky;
    background-size: cover;
    background-attachment: fixed;
    z-index: 9999;
}

h1 span {
    background-color: grey;
    color: black;
    font-size: 55px;
}


header nav {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: right;
    font-family: 'Times New Roman', Times, serif;
    font-size: 30px;
    color: grey;
    border-bottom: grey;

}


a {
    color: grey;
    border-bottom: 30px;
    padding-right: 5px;
}


/* add hero style */

.hero {
    height: 600px;
    width: 100%;
    margin-bottom: 60px;
    background-image: url("../images/lucidchart-edu-lesson-plans-header.png");
    position: relative;
    padding: 100px;
}

.hero h2 span {
    background-color: grey;
    font-size: 45px;
    position: absolute;
    bottom: 8px;
    margin-left: 65%;
}

/* add style body */

article {
    display: inline-flex;
    flex-wrap: left;
    justify-content: space-between;
    align-items: center;
    width: 100%;
} 

.about-me h1 {
    font-size: 65px;
    text-align: left;
    /* width: 20%; */
    float: left;
    padding-left: 30px;
    padding-right: 300px;
}

p {
    font-size: 35px;
    padding: 10px 10px;
    width: 50%;
    float: left;
    flex-wrap: wrap;

}

.pic-me {
    width: 20%;
    float: right;

}

div .life {
    justify-content: space-around;
    width: 50%;
    
}

/*add style work section */

.work {
    display: inline-flex;
    justify-content: center;
    padding: 30px;
    border: 20px;
    width: 100%;
}

main .projects {
    width: 100%;
}

section .projects {
    width: 100%;
    display: flex;
    border: 20px;
    margin-bottom: 200px;
    margin-top: 200px;
    padding-top: 30px;
    padding-bottom: 30px;
}

.projects h1 {
    float: left;
    font-size: 65px;
    text-align: left;
    /* padding: 100px;
    margin-right: 100px */
}   

.link1 {
    max-height: 500px;
    flex-basis: 100%;
    float: right;    
    display: flex;
    width: 25%;
}

.link2 {
    max-height: 150px;
    min-height: 150px;
    flex-basis: 50%;
    float: right;    
    display: flex;
}


.container {
    display: flex;
    /* justify-content: space-between; */
    flex-wrap: wrap;
    margin-left: 15%;
    max-width: 45%;

}



/* add style contact */

.contact-me {
    width: 100%;
    color: black;
    font-size: 45px;
    flex-wrap: wrap;
    display: inline-flex;
}

.contact-me h1 {
    font-size: 45px;
    float: left;
    padding-right: 100px;
}

.locale {
    color: black;
    font-size: 45px;
    float: left;
    padding-top: 35px;
}

/* media query smaller desktop screens and smaller */

@media screen and (max-width : 980px){
    .header {
        padding-bottom: 0;
        justify-content: center;
        position: relative;
        width: max-content;
    }
    
    h1 span {
        width: 100%;
        text-align: left;
    }
    
    nav {
        margin-top: 20px;
        width: 100%;
        justify-content: left;
    }
    .hero {
        width: 993px;
    }

    .hero h2 span {
        justify-content: center;

    }

    .about-me {
        justify-content: center;

    }
}

/* media query tablets or smaller */

@media screen and (max-width : 750px){
    .header {
        padding-bottom: 0;
        justify-content: center;
        position: relative;
        width: max-content;
    }
    
    h1 span {
        width: 100%;
        text-align: left;
    }
    
    nav {
        margin-top: 20px;
        width: 100%;
        justify-content: left;
    }
    .hero {
        width: 993px;
    }

    .hero h2 span {
        justify-content: center;

    }

    .about-me {
        justify-content: center;

    }

}

